[package]
name = "vo-audio-player"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path="src/main/rust/lib.rs"
name = "vobackend"

[[bin]]
path = "src/main/rust/main.rs"
name = "votesting"

[dependencies]

gstreamer = { version = "0.22", features = ["default"] }
rfd = "0.15"
lofty = "0.22"
jni = "0.21"
#asio-sys = "0.2"
dsf = "0.2.2"
id3 = "1.16.3"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1.0.223", features = ["derive"] }
byteorder = "1.4"
rcue = "*"

[target.'cfg(target_os = "linux")'.dependencies]
# low-level ALSA FFI
alsa-sys = "0.2"
crossbeam = "0.8"