[package]
name = "vo-audio-player"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path="src/main/rust/lib.rs"
name = "vobackend"

[[bin]]
path = "src/main/rust/main.rs"
name = "votesting"

[dependencies]

gstreamer = { version = "0.22", features = ["default"] }
gstreamer-pbutils = "0.22"
rfd = "0.15"
lofty = "0.22"
jni = "0.21"
dsf = "0.2.2"
id3 = "1.16.3"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1.0.223", features = ["derive"] }
byteorder = "1.4"
chardetng = "0.1"
encoding_rs = "0.8"
iff_rs = "0.1.2"
torznab = {path = "rust_modules/torznab-rs"}
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
ndsd-playback = "0.1"
[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "0.2"
crossbeam = "0.8"